--- a/WeatherForecast/WeatherForecast/Base.lproj/Main.storyboard
+++ b/WeatherForecast/WeatherForecast/Base.lproj/Main.storyboard
@@ -1,26 +1,99 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Vrq-sK-AM4">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Navigation Controller-->
+        <scene sceneID="HDS-0o-clT">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController id="Vrq-sK-AM4" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="IM8-qJ-Em4">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="nre-SG-tuv" kind="relationship" relationship="rootViewController" id="oaw-1F-GPL"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9IA-MR-k3X" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1074" y="66"/>
+        </scene>
+        <!--Map View Controller-->
+        <scene sceneID="ua9-MG-SSM">
+            <objects>
+                <viewController id="nre-SG-tuv" customClass="MapViewController" customModule="WeatherForecast" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="WUG-8w-fVL"/>
+                        <viewControllerLayoutGuide type="bottom" id="nWN-bS-h1g"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="nsA-2I-4LG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CWk-fE-hyt">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="kxT-MF-5gW"/>
+                                </constraints>
+                                <state key="normal" title="Search"/>
+                                <connections>
+                                    <segue destination="17E-Sp-Yti" kind="show" identifier="pushList" id="7tx-CF-KfE"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YnK-Sd-GEG" customClass="GMSMapView">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="YnK-Sd-GEG" secondAttribute="trailing" id="26x-TT-k4t"/>
+                            <constraint firstItem="CWk-fE-hyt" firstAttribute="top" secondItem="YnK-Sd-GEG" secondAttribute="bottom" id="88S-D4-BVn"/>
+                            <constraint firstItem="YnK-Sd-GEG" firstAttribute="top" secondItem="WUG-8w-fVL" secondAttribute="bottom" id="8KF-Co-Ar7"/>
+                            <constraint firstItem="nWN-bS-h1g" firstAttribute="top" secondItem="CWk-fE-hyt" secondAttribute="bottom" id="JBt-D3-ldb"/>
+                            <constraint firstItem="YnK-Sd-GEG" firstAttribute="leading" secondItem="nsA-2I-4LG" secondAttribute="leading" id="Nnz-cW-hqS"/>
+                            <constraint firstItem="CWk-fE-hyt" firstAttribute="leading" secondItem="nsA-2I-4LG" secondAttribute="leading" id="qmJ-Bz-Z9P"/>
+                            <constraint firstAttribute="trailing" secondItem="CWk-fE-hyt" secondAttribute="trailing" id="x1s-dJ-aAs"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="7Zg-up-wkI"/>
+                    <connections>
+                        <outlet property="mapView" destination="YnK-Sd-GEG" id="yHy-yS-mLD"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="F0a-Wx-08H" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-263.19999999999999" y="64.31784107946028"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="lNo-9V-YZp">
+            <objects>
+                <tableViewController id="17E-Sp-Yti" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="tB3-eZ-Gnp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CityCellId" id="AAc-cK-O9t">
+                                <rect key="frame" x="0.0" y="92" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="AAc-cK-O9t" id="slk-YU-WVh">
+                                    <frame key="frameInset" width="375" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="17E-Sp-Yti" id="r3d-lA-wSN"/>
+                            <outlet property="delegate" destination="17E-Sp-Yti" id="7dx-Xu-ler"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1RU-oJ-OMs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="487" y="65"/>
         </scene>
     </scenes>
 </document>
